--- a/Starter/templates/admin_dashboard.html
+++ b/Starter/templates/admin_dashboard.html
@@ -13,8 +13,11 @@
                 <tr>
                     <th class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">ID</th>
                     <th class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">Full Name</th>
+                    <th class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">Phone Number</th>
                     <th class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">Email</th>
                     <th class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">Message</th>
+                    <th class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">Messaged At</th>
+
                     <th class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">Action</th>
                 </tr>
             </thead>
@@ -23,14 +26,17 @@
                 <tr class="border-b hover:bg-gray-50">
                     <td class="py-2 px-4 text-sm text-gray-600">{{ message.id }}</td>
                     <td class="py-2 px-4 text-sm text-gray-600">{{ message.name }}</td>
+                    <td class="py-2 px-4 text-sm text-gray-600">{{ message.phone_number }}</td>
                     <td class="py-2 px-4 text-sm text-gray-600">{{ message.email }}</td>
                     <td class="py-2 px-4 text-sm text-gray-600">{{ message.texts }}</td>
+                    <td class="py-2 px-4 text-sm text-gray-600">{{ message.created_at }}</td>
+
                     <td class="py-2 px-4 text-sm flex gap-4 flex-row">
-                        <form action="{{ url_for('auth.edit_message', id=message.id) }}" method="GET">
+                        <form action="{{ url_for('views.edit_message', id=message.id) }}" method="GET">
                             <button type="submit" class="btn btn-primary w-1/2">Edit</button>
                         </form>
 
-                        <form action="{{ url_for('auth.delete_message', id=message.id) }}" method="POST"
+                        <form action="{{ url_for('views.delete_message', id=message.id) }}" method="POST"
                             onsubmit="return confirm('Are you sure you want to delete this message?');">
                             <button type="submit"
                                 class="btn btn-danger w-1/2 text-red-600 hover:text-red-800 font-medium">Delete</button>
@@ -43,6 +49,43 @@
     </div>
 </div>
 
+<div class=" mt-6 mx-auto max-w-5xl">
+    <a class="-ml-0.5 text-xl  hover:bg-red-900 text-gray-50 rounded-lg m-4 bg-green-600 font-bold mb-4 px-3 py-2">
+        Subscribers
+    </a>
+    <div class="overflow-x-auto mt-3">
+        <table class="min-w-full bg-white border border-gray-200">
+            <thead class="bg-gray-100">
+                <tr>
+                    <th class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">ID</th>
+                    <th class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">Email</th>
+                    <th class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">Last Subscribed</th>
+                    <th class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for subscriber in list_subscribers %}
+                <tr class="border-b hover:bg-gray-50">
+                    <td class="py-2 px-4 text-sm text-gray-600">{{ subscriber.id }}</td>
+                    <td class="py-2 px-4 text-sm text-gray-600">{{ subscriber.email }}</td>
+                    <td class="py-2 px-4 text-sm text-gray-600">{{subscriber.created_at}}</td>
+                    <td class="py-2 px-4 text-sm flex gap-4 flex-row">
+                        <form action="{{ url_for('views.edit_subscriber', id=subscriber.id) }}" method="GET">
+                            <button type="submit" class="btn btn-primary w-1/2">Edit</button>
+                        </form>
+
+                        <form action="{{ url_for('views.delete_subscriber', id=subscriber.id) }}" method="POST"
+                            onsubmit="return confirm('Are you sure you want to delete this subscriber?');">
+                            <button type="submit"
+                                class="btn btn-danger w-1/2 text-red-600 hover:text-red-800 font-medium">Delete</button>
+                        </form>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
 
 <div class=" mt-6 mx-auto max-w-5xl">
     <a class="-ml-0.5 text-xl hover:bg-red-900 text-gray-50 rounded-lg m-4 bg-green-600 font-bold mb-4 px-3 py-2">
@@ -56,6 +99,7 @@
                     <th class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">Full Name</th>
                     <th class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">Email</th>
                     <th class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">Is_Admin</th>
+                    <td class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">User Registered At</td>
                     <th class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">Action</th>
                 </tr>
             </thead>
@@ -65,6 +109,7 @@
                     <td class="py-2 px-4 text-sm text-gray-600">{{ user.id }}</td>
                     <td class="py-2 px-4 text-sm text-gray-600">{{ user.username }}</td>
                     <td class="py-2 px-4 text-sm text-gray-600">{{ user.email }}</td>
+                    <td class="py-2 px-4 text-sm text-gray-600">{{subscriber.created_at}}</td>
                     <td class="py-2 px-4 text-sm text-gray-600">{{ "Yes" if user.is_admin else "No" }}</td>
                     <td class="py-2 px-4 text-sm flex gap-4 flex-row">
                         <form action="{{ url_for('auth.edit_user', id=user.id) }}" method="GET">
@@ -101,4 +146,7 @@
         </div>
     </div>
 </div>
+
+
+
 {% endblock %}
