--- a/Starter/templates/edit_message.html
+++ b/Starter/templates/edit_message.html
@@ -1,15 +1,15 @@
 {% extends "layout.html" %}
 {% block head %}
-<title>Add Message - Student Database</title>
+<title>Update message Database</title>
 {% endblock %}
 {% block content %}
-<div class="flex justify-center items-center mx-auto max-w-5xl" style="height: 80vh;">
-    <div class="card p-6 w-full max-w-md">
-        <h2 class="text-center text-2xl font-semibold mb-6">Fill Out Form</h2>
-        <form method="POST" action="{{ url_for('views.add_message') }}">
+<div class="flex justify-center items-center mx-auto max-w-5x" style="height: 80vh;">
+    <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-md">
+        <h2 class="text-center text-2xl font-bold mb-6">Update Form</h2>
+        <form method="POST" action="{{ url_for('views.get_message', id=message.id) }}">
             <div class="mb-4">
                 <label for="name" class="block text-sm font-medium text-gray-700">Full Name</label>
-                <input type="text" id="name" name="name"
+                <input type="text" id="name" name="name" value="{{ message.name }}"
                     class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm"
                     required>
             </div>
@@ -19,28 +19,30 @@
                     class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm"
                     required>
             </div>
+
             <div class="mb-4">
                 <label for="email" class="block text-sm font-medium text-gray-700">Email address</label>
-                <input type="email" id="email" name="email"
+                <input type="email" id="email" name="email" value="{{ message.email }}"
                     class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm"
                     required>
             </div>
+
             <div class="mb-4">
                 <label for="texts" class="block text-sm font-medium text-gray-700">Message</label>
-                <textarea type="texts" id="texts" name="texts"
+                <input type="text" id="texts" name="texts" value="{{ message.texts }}"
                     class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm"
                     required>
-                </textarea>
             </div>
+
             <div class="mt-6">
                 <button type="submit"
-                    class="w-full bg-indigo-600 text-white font-semibold py-2 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
-                    Add message
-                </button>
+                    class="w-full bg-indigo-600 text-white font-semibold py-2 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Update
+                    message</button>
             </div>
+
             <div class="mt-6">
                 <a href="{{ url_for('views.home') }}">
-                    <button 
+                    <button
                         class="w-full bg-indigo-600 text-white font-semibold py-2 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
                         Home
                     </button>
