--- a/Starter/templates/edit_subscriber.html
+++ b/Starter/templates/edit_subscriber.html
@@ -1,29 +1,15 @@
 {% extends "layout.html" %}
 {% block head %}
-<title>Update message Database</title>
+<title>Update Subscriber Database</title>
 {% endblock %}
 {% block content %}
 <div class="flex justify-center items-center mx-auto max-w-5x" style="height: 80vh;">
     <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-md">
         <h2 class="text-center text-2xl font-bold mb-6">Update Form</h2>
-        <form method="POST" action="{{ url_for('auth.edit_message', id=message.id) }}">
-            <div class="mb-4">
-                <label for="name" class="block text-sm font-medium text-gray-700">Full Name</label>
-                <input type="text" id="name" name="name" value="{{ message.name }}"
-                    class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm"
-                    required>
-            </div>
-
-            <div class="mb-4">
+        <form method="POST" action="{{ url_for('views.get_subscriber', id=subscriber.id) }}">
+                        <div class="mb-4">
                 <label for="email" class="block text-sm font-medium text-gray-700">Email address</label>
-                <input type="email" id="email" name="email" value="{{ message.email }}"
-                    class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm"
-                    required>
-            </div>
-
-            <div class="mb-4">
-                <label for="texts" class="block text-sm font-medium text-gray-700">Message</label>
-                <input type="text" id="texts" name="texts" value="{{ message.texts }}"
+                <input type="email" id="email" name="email" value="{{ subscriber.email }}"
                     class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm"
                     required>
             </div>
@@ -31,7 +17,7 @@
             <div class="mt-6">
                 <button type="submit"
                     class="w-full bg-indigo-600 text-white font-semibold py-2 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Update
-                    message</button>
+                    subscriber</button>
             </div>
 
             <div class="mt-6">
