--- a/Starter/templates/user_login.html
+++ b/Starter/templates/user_login.html
@@ -8,7 +8,7 @@
         <div class="md:w-1/2  px-8  ">
             <h2 class="font-bold text-3xl text-[#002D74]">
                 <div class="flex justify-center items-center">
-                    <a href="{{ url_for('views.index') }}" class="flex items-center hidden lg:block">
+                    <a href="/index" class="flex items-center hidden lg:block">
                         <img width="314" height="47"
                             src="https://www.masikakoross.com/wp-content/uploads/2022/02/cropped-rsz_mk_letterhead_1-removebg-preview.png"
                             class="custom-logo   pl-1 pr-1 rounded-lg transition-transform duration-500 transform ease-in-out hover:scale-110"
