--- a/Starter/templates/admin_dashboard.html
+++ b/Starter/templates/admin_dashboard.html
@@ -8,45 +8,44 @@
         Messages
     </a>
     <div class="overflow-x-auto mt-3">
-        <table class="min-w-full bg-white border border-gray-200">
-            <thead class="bg-gray-100">
-                <tr>
-                    <th class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">ID</th>
-                    <th class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">Full Name</th>
-                    <th class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">Phone Number</th>
-                    <th class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">Email</th>
-                    <th class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">Message</th>
-                    <th class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">Messaged At</th>
+    <table class="min-w-full bg-white border border-gray-200">
+        <thead class="bg-gray-100">
+            <tr>
+                <th scope="col" class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">ID</th>
+                <th scope="col" class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">Full Name</th>
+                <th scope="col" class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">Phone Number</th>
+                <th scope="col" class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">Email</th>
+                <th scope="col" class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">Message</th>
+                <th scope="col" class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">Messaged At</th>
+                <th scope="col" class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for message in list_messages %}
+            <tr>
+                <td class="py-2 px-4 text-sm text-gray-600">{{ message.id }}</td>
+                <td class="py-2 px-4 text-sm text-gray-600">{{ message.name or 'N/A' }}</td>
+                <td class="py-2 px-4 text-sm text-gray-600">{{ message.phone_number or 'N/A' }}</td>
+                <td class="py-2 px-4 text-sm text-gray-600">{{ message.email or 'N/A' }}</td>
+                <td class="py-2 px-4 text-sm text-gray-600">{{ message.texts or 'No message' }}</td>
+                <td class="py-2 px-4 text-sm text-gray-600">{{ message.created_at or 'Unknown' }}</td>
+                <td class="py-2 px-4 text-sm flex gap-2">
+                    <a href="{{ url_for('views.edit_message', id=message.id) }}" class="btn btn-primary">
+                        <img src="../static/icon/pencil.svg" alt="Edit" class="w-4">
+                    </a>
+                    <form action="{{ url_for('views.delete_message', id=message.id) }}" method="POST">
+                        <button type="submit" onclick="return confirm('Are you sure?')" class="text-red-600 hover:text-red-800">
+                            <img src="../static/icon/trash.svg" alt="Delete" class="w-4">
+                        </button>
+                    </form>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 
-                    <th class="py-2 px-4 border-b text-left text-sm font-medium text-gray-700">Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for message in list_messages %}
-                <tr class="border-b hover:bg-gray-50">
-                    <td class="py-2 px-4 text-sm text-gray-600">{{ message.id }}</td>
-                    <td class="py-2 px-4 text-sm text-gray-600">{{ message.name }}</td>
-                    <td class="py-2 px-4 text-sm text-gray-600">{{ message.phone_number }}</td>
-                    <td class="py-2 px-4 text-sm text-gray-600">{{ message.email }}</td>
-                    <td class="py-2 px-4 text-sm text-gray-600">{{ message.texts }}</td>
-                    <td class="py-2 px-4 text-sm text-gray-600">{{ message.created_at }}</td>
 
-                    <td class="py-2 px-4 text-sm flex gap-4 flex-row">
-                        <form action="{{ url_for('views.get_message', id=message.id) }}" method="GET">
-                            <button type="submit" class="btn btn-primary w-1/2"><img  src="../static/icon/pencil.svg" alt="" srcset=""></button>
-                        </form>
-
-                        <form action="{{ url_for('views.delete_message', id=message.id) }}" method="POST"
-                            onsubmit="return confirm('Are you sure you want to delete this message?');">
-                            <button type="submit"
-                                class="btn btn-danger w-1/2 text-red-600 hover:text-red-800 font-medium"><img  src="../static/icon/trash.svg" alt="" srcset=""></button>
-                        </form>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
 </div>
 
 <div class=" mt-6 mx-auto max-w-5xl">
@@ -71,13 +70,15 @@
                     <td class="py-2 px-4 text-sm text-gray-600">{{subscriber.created_at}}</td>
                     <td class="py-2 px-4 text-sm flex gap-4 flex-row">
                         <form action="{{ url_for('views.get_subscriber', id=subscriber.id) }}" method="GET">
-                            <button type="submit" class="btn btn-primary w-1/2"><img src="../static/icon/pencil.svg" alt="" srcset=""></button>
+                            <button type="submit" class="btn btn-primary w-1/2"><img src="../static/icon/pencil.svg"
+                                    alt="" srcset=""></button>
                         </form>
 
                         <form action="{{ url_for('views.delete_subscriber', id=subscriber.id) }}" method="POST"
                             onsubmit="return confirm('Are you sure you want to delete this subscriber?');">
                             <button type="submit"
-                                class="btn btn-danger w-1/2 text-red-600 hover:text-red-800 font-medium"><img src="../static/icon/trash.svg" alt="" srcset=""></button>
+                                class="btn btn-danger w-1/2 text-red-600 hover:text-red-800 font-medium"><img
+                                    src="../static/icon/trash.svg" alt="" srcset=""></button>
                         </form>
                     </td>
                 </tr>
@@ -108,18 +109,20 @@
                 <tr class="border-b hover:bg-gray-50">
                     <td class="py-2 px-4 text-sm text-gray-600">{{ user.id }}</td>
                     <td class="py-2 px-4 text-sm text-gray-600">{{ user.username }}</td>
-                    <td class="py-2 px-4 text-sm text-gray-600">{{ user.email }}</td>                    
+                    <td class="py-2 px-4 text-sm text-gray-600">{{ user.email }}</td>
                     <td class="py-2 px-4 text-sm text-gray-600">{{ "Yes" if user.is_admin else "No" }}</td>
                     <td class="py-2 px-4 text-sm text-gray-600">{{user.created_at}}</td>
                     <td class="py-2 px-4 text-sm flex gap-4 flex-row">
                         <form action="{{ url_for('auth.edit_user', id=user.id) }}" method="GET">
-                            <button type="submit" class="btn btn-primary w-1/2"><img src="../static/icon/pencil.svg" alt="" srcset=""></button>
+                            <button type="submit" class="btn btn-primary w-1/2"><img src="../static/icon/pencil.svg"
+                                    alt="" srcset=""></button>
                         </form>
 
                         <form action="{{ url_for('auth.delete_user', id=user.id) }}" method="POST"
                             onsubmit="return confirm('Are you sure you want to delete this user?');">
                             <button type="submit"
-                                class="btn btn-danger w-1/2 text-red-600 hover:text-red-800 font-medium"><img src="../static/icon/trash.svg" alt="" srcset=""></button>
+                                class="btn btn-danger w-1/2 text-red-600 hover:text-red-800 font-medium"><img
+                                    src="../static/icon/trash.svg" alt="" srcset=""></button>
                         </form>
                     </td>
                 </tr>
@@ -128,7 +131,7 @@
         </table>
 
         <div class="mt-6">
-            <a href="{{ url_for('views.home') }}">
+            <a href="/home">
                 <button
                     class="w-full bg-indigo-600 text-white font-semibold py-2 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
                     Home
@@ -137,7 +140,7 @@
         </div>
 
         <div class="mt-6">
-            <a href="/admin_page" target="_blank">
+            <a href="{{ url_for('views.admin_page') }}" target="_blank">
                 <button
                     class="w-full bg-indigo-600 text-white font-semibold py-2 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
                     Go to Update on RealTime
