--- a/Starter/templates/layout.html
+++ b/Starter/templates/layout.html
@@ -38,7 +38,7 @@
 
         <!-- Logo Section -->
         <div class=" mb-1.5 md:mb-0">
-            <a href="{{ url_for('views.index') }}" class="flex items-center justify-center md:justify-start">
+            <a href="/index" class="flex items-center justify-center md:justify-start">
                 <img width="397" height="47" src="../../static/images/m-logo.svg" alt="Masika Koross Logo"
                     class="max-w-[480px] md:max-w-[580px] lg:max-w-[690px] rounded-lg transition-transform duration-500 transform ease-in-out hover:scale-110">
             </a>
@@ -97,7 +97,7 @@
                 <!-- Navbar -->
                 <div id="menu"
                     class="toggle hidden md:flex flex-wrap   justify-center gap-x-4 p-0.5 w-full text-[#d13642] bell-regular font-medium uppercase mt-5 md:mt-0">
-                    <a href="{{ url_for('views.home') }}"
+                    <a href="/home"
                         class="block py-2 pl-3 bell-regular  md:text-lg text-sm pr-4 text-[#d13642] uppercase    hover:underline  hover:text-[#d13642]">
                         Home
                     </a>
@@ -200,20 +200,7 @@
                         class=" md:hidden block py-2 pl-3 bell-regular  md:text-lg text-sm pr-4 text-[#d13642] uppercase    hover:underline  hover:text-[#d13642]">
                         Sign Out?
                     </a>
-                    <!-- This form uses the form backend service FabForm.io --->
-                    <!-- <div class=" hidden md:block md:flex justify-start">
-                        <div class="flex justify-center items-center" id="navItems">
-                            Trigger Button
-                            <span class="group">
-                                <button
-                                    class='block  md:text-lg text-sm  hover:text-[#d13642] text-md uppercase  bell font-bold text-[#d13642]'
-                                    href="{{ url_for('pages.blog') }}" onclick="scrollToSection('section1')">Blog</button>
-                                <div
-                                    class="w-0 group-hover:w-full h-0.5 bg-red-600 ease-in-out duration-500 rounded-xs">
-                                </div>
-                            </span>
-                        </div>
-                    </div> -->
+                    
                     <div class="rounded-xl toggle pl-1">
                         <div
                             class="flex justify-center  items-center bell-regular  text-sm md:text-md lg:text-lg font-medium">
@@ -284,7 +271,7 @@
                                             </button>
                                         </div>
                                         <a href="{{ url_for('auth.auth_logout') }}"
-                                            class=" text-md flex bell justify-center items-center rounded-xl font-bold mb-4 bg-[#950] text-white font-bold py-2 px-4 rounded hover:bg-red-600">
+                                            class=" text-md flex bell justify-center items-center rounded-xl font-bold mb-4 bg-[#950] text-white py-2 px-4 hover:bg-red-600">
                                             Logout?
                                         </a>
                                     </div>
@@ -349,13 +336,13 @@
 
         <footer class="">
             <div class="container mx-auto p-0 md:p-8 xl:px-0  ">
-                <div class="mx-auto max-w-8xl px-6 pb-10 pt-16 lg:mt-28 shadow-lg opacity-90 shadow-lg hover:shadow-xl 5"
+                <div class="mx-auto max-w-8xl px-6 pb-10 pt-16 lg:mt-28  opacity-90 shadow-lg hover:shadow-xl 5"
                     style="background-color: #150233;" data-aos="fade-up" data-aos-duration="1000">
                     <div class="xl:grid xl:grid-cols-3 xl:gap-4">
                         <div class="space-y-4 md:mt-16 lg:justify-normal md:justify-center justify-center ">
                             <div>
-                                <a href="{{ url_for('views.index') }}"
-                                    class="flex items-center flex justify-center mb-6 lg:justify-start space-x-3 transition-transform transform hover:-translate-y-2">
+                                <a href="/index"
+                                    class=" items-center flex justify-center mb-6 lg:justify-start space-x-3 transition-transform transform hover:-translate-y-2">
                                     <span class="text-rose-600 ">
                                         <img width="380" height="57" src="../../static/images/m-logo.svg"
                                             class="custom-logo  bg-white p-2  rounded-lg transition-transform duration-500 transform ease-in-out hover:scale-110"
@@ -633,7 +620,7 @@
                             <div>
                                 <span
                                     class=" text-sm md:text-md items-center justify-center  bell-regular font-bold text-center">
-                                    ©<a href="{{ url_for('views.home') }}">Masika and Koross</a>
+                                    ©<a href="/home">Masika and Koross</a>
                                     2024, All rights reserved.
                                 </span>
                             </div>
@@ -657,6 +644,7 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="../static/js/consult.js"></script>
+    <script src="../static/js/registers.js"></script>
     <script src="../static/js/counter.js"></script>
     <script src="../static/js/background-changer.js"></script>
     <script src="../static/js/footer-accordion.js"></script>
